--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie": "^0.3.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
+    "mongodb": "^3.1.9",
     "sha256": "^0.2.0",
     "socket.io": "^2.1.1",
     "uuid": "^3.3.2"
