--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.4",
     "md5": "^2.2.1",
     "mongodb": "^3.1.9",
+    "multer": "^1.4.1",
     "sha256": "^0.2.0",
     "socket.io": "^2.1.1",
     "uuid": "^3.3.2"
